<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Your Song</string>
    <string name="look_up">Look Up</string>
    <string name="title_only">Title only</string>
    <string name="title_or_lyrics">Title or lyrics</string>
    <string name="send_song">Send Your Song</string>
    <string name="send_title">I found Your Song!</string>
    <string name="send_message" formatted="false">Hey %s, I found Your Song: %s, by %s.</string>
    <string name="send_link">Listen here:</string>
    <string name="title_and_lyrics">Title and Lyrics</string>
    <string name="welcome_title">Find Your Song</string>
    <string name="welcome_subtitle">discover whose name is in what song</string>
    <string name="select_person">Pick a contact</string>
    <string name="alternate_search">Or search any name here:</string>
    <string name="share_dialog">Share via</string>
    <string name="no_tracks">Sorry!\nNo tracks were found</string>
    <string name="empty_query">Oops! Search can\'t be empty</string>
    <string name="no_name">Contact doesn\'t have a name</string>
    <string name="powered_by">Powered by</string>
    <string name="listen">Listen</string>
</resources>
